# pyEM

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: enhancement-template.yml  issue-template.yml  question-template.yml
.github/workflows/: docs.yml  pytest.yml
api/: index.html
api/core/: index.html
api/emmodel/: index.html
api/utils/: index.html
assets/: README.md
assets/source/: pyem-color-palette.gpl
customization/: index.html
data/: simcheck_L.csv  simcheck_all_choice.csv  simulated_basic.csv  simulated_context.csv  simulated_outcome.csv  simulated_valence.csv
docs/: customization.md  faq.md  index.md  installation.md  quickstart.md  references.md  troubleshooting.md
docs/api/: core.md  emmodel.md  index.md  utils.md
docs/examples/: bayes.ipynb  ddm.ipynb  discounting.ipynb  glm.ipynb  params.py  rl_mb.ipynb  rl_mf.ipynb  sdt.ipynb
docs/stylesheets/: extra.css
examples/: Bayes.ipynb  EMClass.ipynb  EMfit_RW.pkl  EMfit_RW_context.pkl  GLM.ipynb  GLM_decay.ipynb  RW.ipynb  RW_fit_slot_RW_basic_Sep24.csv  RW_fit_slot_outcome.csv  RW_lme.ipynb  RW_simulation.ipynb  bayes.ipynb  bayes.md  bayes_models.py  custom_prior.md  ddm.ipynb  discounting.ipynb  glm.ipynb  glm.md  glm_models.py  params.py  pcc.md  prospect_theory.ipynb  pt.ipynb  rl.ipynb  rl.md  rl_mb.ipynb  rl_mf.ipynb  rw_models.py  rw_simulation.py  sdt.ipynb  social_discounting.ipynb  template_model.py
examples/BayesFishTask/: Bayes.ipynb  bayes_models.py
examples/LinearModel/: GLM_decay.ipynb  (+1 more)
faq/: index.html
installation/: index.html
javascripts/: mathjax.js
pyEM/: __init__.py  classes.py  fitting.py  math.py  plotting.py
pyem/: __init__.py  api.py
quickstart/: index.html
references/: index.html
search/: search_index.json
testing/: EMfitting_basicRW.ipynb  test.ipynb
tests/: test_bayes_nfish.py  test_bicint.py  test_bugfixes.py  test_compare.py  test_ddm.py  test_discounting.py  test_emmodel_methods.py  test_enhanced_functionality.py  test_fitting.py  test_glm_hardening.py  test_groupdist.py  test_hardening.py  test_helpers.py  test_modelspec.py  test_new_priors.py  test_plotting.py  test_ppc_recovery.py  test_priors.py  test_prospect_theory.py  test_rl_mb.py  test_rl_mf_fit.py  test_sdt.py  test_shared_mask.py  test_smoke.py  test_stats.py  test_utils.py
troubleshooting/: index.html
(+96 files in other folders)
