
[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyem"
version = "0.2.0"
description = "Hierarchical EM with MAP estimation for fitting models to behavior"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Shawn A. Rhoads"}]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.10",
  "pandas>=1.5",
  "matplotlib",
  "joblib>=1.3",
  "typing-extensions>=4.6",
]

[project.urls]
Homepage = "https://github.com/shawnrhoads/pyEM"
Documentation = "https://shawnrhoadsphd.com/pyEM"
Repository = "https://github.com/shawnrhoads/pyEM"

[project.optional-dependencies]
viz = ["seaborn"]
extras = ["statsmodels", "scikit-learn", "tqdm"]
dev = ["pytest", "seaborn"]

[tool.setuptools.packages.find]
include = ["pyem*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
